# jax-sgmc

./: .gitignore  .readthedocs.yml  CIFAR100.ipynb  LICENSE_SHORT  README.md  pylintrc  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yml  ci.yml  docs.yml  publish.yml  python-app.yml  test.yml  test_and_lint.yml
docs/: conf.py  developer_api.rst  index.rst  installation.md  jax-sgmc.data.rst  jax-sgmc.distributions.rst  jax-sgmc.integrator.rst  jax-sgmc.potential.rst  jax-sgmc.rst  jax-sgmc.scheduler.rst  jax-sgmc.util.rst  jax_sgmc.adaption.rst  jax_sgmc.data.rst  jax_sgmc.integrator.rst  jax_sgmc.io.rst  jax_sgmc.potential.rst  jax_sgmc.rst  jax_sgmc.scheduler.rst  jax_sgmc.solver.rst  jax_sgmc.util.rst  public_api.rst  quickstart.ipynb  quickstart.md  quickstart.rst  requirements.txt  solvers.rst
docs/advanced/: adaption.rst  scheduler.rst  util.rst
docs/api/: index.rst  jax_sgmc.adaption.rst  jax_sgmc.alias.rst  jax_sgmc.data.rst  jax_sgmc.integrator.rst  jax_sgmc.io.rst  jax_sgmc.potential.rst  jax_sgmc.scheduler.rst  jax_sgmc.solver.rst  jax_sgmc.util.rst
docs/developer/: jax_sgmc.integrator.rst
docs/examples/: cifar.ipynb  cifar.md  force_matching.md  index.rst  linear-regression.ipynb  molecular_modeling.ipynb  molecular_modeling.md
docs/usage/: data.rst  index.rst  io.rst  potential.rst  scheduler.rst  sgld_rms.ipynb  sgld_rms.md  solver.rst
examples/: cifar.ipynb  cifar.md  cifar.py  molecular_modeling.ipynb  molecular_modeling.md  parallel_chains.py  quickstart.ipynb  quickstart.md  sgld_rms.ipynb  sgld_rms.md  sgld_rms_logistic.py
examples/amagold/: amagold.py  sggmc.py  sggmc_mass_adaption.py
examples/cifar10/: CIFAR10.py  CIFAR100.ipynb  CIFAR10_MobileNetV1.ipynb  CIFAR10_MobileNetV1.py  cifar.md
examples/cifar100/: CIFAR100.ipynb  CIFAR100.py  CIFAR10_MobileNetV1.py  CIFAR_Postprocessing.py
examples/force_matching/: hmc_spline.py  sggmc_spline.py  sgmc_spine.py  spline_potential.py
examples/force_matching/hmc_results/: chain_0.npz
examples/langevin_diffusion/: langevin_diffusion.py
examples/langevin_diffusion/async_saving/: async_saving.py
examples/langevin_diffusion/checkpoint/: checkpoint.py
examples/linear_regression/: linear-regression.ipynb
examples/reSGLD/: langevin_diffusion.py
examples/sghmc/: obabo.py  reversible_hmc.py
jax_sgmc/: __init__.py  adaption.py  alias.py  data.py  distributions.py  integrator.py  io.py  potential.py  scheduler.py  solver.py  util.py  version.py
jax_sgmc/data/: __init__.py  core.py  hdf5_loader.py  numpy.py  numpy_loader.py  tensorflow.py  tensorflow_loader.py
jax_sgmc/util/: __init__.py  host_callback.py  list_map.py  numpyro.py  scan_vmap.py  stop_vmap.py  testing.py  tree_util.py  uuid.py
tests/: conftest.py  test_adaption.py  test_alias.py  test_data.py  test_inference.py  test_integrator.py  test_io.py  test_potential.py  test_scan_vmap.py  test_scheduler.py  test_tree_operations.py  test_vmap.py
