[metadata]
name = jax_sgmc
version = 0.0.1
author = Paul Fuchs
author_email = paul.fuchs@tum.de
description = Stochastic Gradient Monte Carlo using Jax
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pfuxs/jax-sgmc
project_urls =
    Bug Tracker = https://github.com/pfuxs/jax-sgmc/issues
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering
    Intended Audience :: Scientific/Research
    Intended Audience :: Developers

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src