[metadata]
name = jax_sgmc
version = 0.1.0
author = Paul Fuchs
author_email = paul.fuchs@tum.de
description = Stochastic Gradient Monte Carlo in Jax
license = Apache 2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tummfm/jax-sgmc
project_urls =
    Bug Tracker = https://github.com/tummfm/jax-sgmc/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Intended Audience :: Developers

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    jax >= 0.1.73
    jaxlib >= 0.1.52
    dataclasses

[options.extras_require]
tensorflow =
    tensorflow
    tensorflow_datasets
test =
    pylint
    pytest
    pytest-mock
docs =
    sphinx >= 3
    sphinx_rtd_theme
    sphinx-autodoc-typehints == 1.11.1
    myst-nb
    numpyro
hdf5 =
    h5py
